--- a/Config.ini
+++ b/Config.ini
@@ -11,5 +11,7 @@ WorldHeight=200
 WorldCellSize=40
 
 [System]
-InitialEntityPoolSize=100
+InitialBuildingPoolSize=100
+InitialHousePoolSize=100
+InitialRoadPoolSize=100
 InitialAgentPoolSize=100
