--- a/Config.ini
+++ b/Config.ini
@@ -10,6 +10,9 @@ WorldWidth=200
 WorldHeight=200
 WorldCellSize=40
 
+[User Interface]
+CommandsPerPage=10
+
 [System]
 InitialBuildingPoolSize=100
 InitialHousePoolSize=100
