--- a/Config.ini
+++ b/Config.ini
@@ -14,6 +14,7 @@ WorldCellSize=40
 CommandsPerPage=10
 
 [System]
+GameSpeed=1
 InitialBuildingPoolSize=100
 InitialHousePoolSize=100
 InitialRoadPoolSize=100
