Applied money and costs and fixed stuff

--- a/Config.ini
+++ b/Config.ini
@@ -13,8 +13,12 @@ WorldCellSize=40
 [User Interface]
 CommandsPerPage=10
 
-[System]
+[Gameplay]
+StartingMoney=100000
+RoadCost=5
 GameSpeed=1
+
+[System]
 InitialBuildingPoolSize=100
 InitialHousePoolSize=100
 InitialRoadPoolSize=100
