Modified behaviors and still doing pathfinding

--- a/Config.ini
+++ b/Config.ini
@@ -17,6 +17,7 @@ CommandsPerPage=10
 StartingMoney=100000
 RoadCost=5
 GameSpeed=20
+AgentMaxWalkDistance=50
 
 [System]
 InitialBuildingPoolSize=100
