--- a/Config.ini
+++ b/Config.ini
@@ -16,8 +16,9 @@ CommandsPerPage=10
 [Gameplay]
 StartingMoney=100000
 RoadCost=5
-GameSpeed=20
+GameSpeed=30
 AgentMaxWalkDistance=50
+AgentSpeed=1
 
 [System]
 InitialBuildingPoolSize=100
