Houses now have initial agent and money count and updated wealth

--- a/Config.ini
+++ b/Config.ini
@@ -19,6 +19,8 @@ RoadCost=5
 GameSpeed=10
 AgentMaxWalkDistance=50
 AgentSpeed=1
+LowWealthBracket=2000
+MediumWealthBracket=5000
 
 [System]
 InitialBuildingPoolSize=100
